cmake_minimum_required(VERSION 3.0)

project(CarresCouleur2)

include_directories(.)

add_executable(carres_couleur_2
	Moteur2D/Entries/EventsMap.cpp
	Moteur2D/Entries/EventsMap.hpp
	Moteur2D/Entries/InputsAbstraction.cpp
	Moteur2D/Entries/InputsAbstraction.hpp
	Moteur2D/Entries/InputsArray.cpp
	Moteur2D/Entries/InputsArray.hpp
	Moteur2D/GameController.cpp
	Moteur2D/GameController.hpp
	Moteur2D/Game/PlacedVart.hpp
	Moteur2D/Game/SimpleHitbox.cpp
	Moteur2D/Game/SimpleHitbox.hpp
	Moteur2D/Game/SimpleVart.cpp
	Moteur2D/Game/SimpleVart.hpp
	Moteur2D/Game/VartAbs.hpp
	Moteur2D/Game/VartList.hpp
	Moteur2D/Graphic/AnimatedSprite.cpp
	Moteur2D/Graphic/AnimatedSprite.hpp
	Moteur2D/Graphic/DrawableObject.hpp
	Moteur2D/Graphic/DrawerAbstraction.hpp
	Moteur2D/Graphic/ObjectDrawer.cpp
	Moteur2D/Graphic/ObjectDrawer.hpp
	Moteur2D/Graphic/SimpleSprite.cpp
	Moteur2D/Graphic/SimpleSprite.hpp
	Moteur2D/Interfaces/AbstractHUD.hpp
	Moteur2D/Interfaces/Items/AbstractItem.cpp
	Moteur2D/Interfaces/Items/AbstractItem.hpp
	Moteur2D/Interfaces/Items/Buttons/ButtonAbstraction.cpp
	Moteur2D/Interfaces/Items/Buttons/ButtonAbstraction.hpp
	Moteur2D/Interfaces/Items/Buttons/PushButton.cpp
	Moteur2D/Interfaces/Items/Buttons/PushButton.hpp
	Moteur2D/Interfaces/Items/Buttons/SimplePushButton.cpp
	Moteur2D/Interfaces/Items/Buttons/SimplePushButton.hpp
	Moteur2D/Interfaces/Items/Buttons/TextBoxPushButton.cpp
	Moteur2D/Interfaces/Items/Buttons/TextBoxPushButton.hpp
	Moteur2D/Interfaces/Items/Containers/AbstractItemGrid.cpp
	Moteur2D/Interfaces/Items/Containers/AbstractItemGrid.hpp
	Moteur2D/Interfaces/Items/Containers/AbstractItemLine.cpp
	Moteur2D/Interfaces/Items/Containers/AbstractItemLine.hpp
	Moteur2D/Interfaces/Items/Containers/ItemBox.cpp
	Moteur2D/Interfaces/Items/Containers/ItemBox.hpp
	Moteur2D/Interfaces/Items/Containers/ItemGrid.cpp
	Moteur2D/Interfaces/Items/Containers/ItemGrid.hpp
	Moteur2D/Interfaces/Items/Containers/ItemLine.cpp
	Moteur2D/Interfaces/Items/Containers/ItemLine.hpp
	Moteur2D/Interfaces/Items/Containers/ItemStack.cpp
	Moteur2D/Interfaces/Items/Containers/ItemStack.hpp
	Moteur2D/Interfaces/Items/Containers/VariableItem.cpp
	Moteur2D/Interfaces/Items/Containers/VariableItem.hpp
	Moteur2D/Interfaces/Items/Counter.cpp
	Moteur2D/Interfaces/Items/Counter.hpp
	Moteur2D/Interfaces/Items/Label.cpp
	Moteur2D/Interfaces/Items/Label.hpp
	Moteur2D/Interfaces/Items/LifeCounter.cpp
	Moteur2D/Interfaces/Items/LifeCounter.hpp
	Moteur2D/Interfaces/Items/Sprite.cpp
	Moteur2D/Interfaces/Items/Sprite.hpp
	Moteur2D/Interfaces/Items/Text.cpp
	Moteur2D/Interfaces/Items/Text.hpp
	Moteur2D/Interfaces/Items/TextBox.cpp
	Moteur2D/Interfaces/Items/TextBox.hpp
	Moteur2D/Interfaces/Items/TextObjectAbstraction.cpp
	Moteur2D/Interfaces/Items/TextObjectAbstraction.hpp
	Moteur2D/Interfaces/Menus/BasicMenuInterface.cpp
	Moteur2D/Interfaces/Menus/BasicMenuInterface.hpp
	Moteur2D/Interfaces/Menus/ButtonListAbstraction.cpp
	Moteur2D/Interfaces/Menus/ButtonListAbstraction.hpp
	Moteur2D/Interfaces/Menus/MenuInterfaceAbstraction.cpp
	Moteur2D/Interfaces/Menus/MenuInterfaceAbstraction.hpp
	Moteur2D/Interfaces/Menus/SimpleButtonList.cpp
	Moteur2D/Interfaces/Menus/SimpleButtonList.hpp
	Moteur2D/Interfaces/Screens/BasicArcadeLevel.cpp
	Moteur2D/Interfaces/Screens/BasicArcadeLevel.hpp
	Moteur2D/Interfaces/Screens/BasicEndCreditsScreen.cpp
	Moteur2D/Interfaces/Screens/BasicEndCreditsScreen.hpp
	Moteur2D/Interfaces/Screens/EndCreditsScreen.cpp
	Moteur2D/Interfaces/Screens/EndCreditsScreen.hpp
	Moteur2D/Interfaces/Screens/Level.cpp
	Moteur2D/Interfaces/Screens/Level.hpp
	Moteur2D/Interfaces/Screens/PressKeyToContinue.cpp
	Moteur2D/Interfaces/Screens/PressKeyToContinue.hpp
	Moteur2D/Interfaces/Screens/ScreenAbstraction.cpp
	Moteur2D/Interfaces/Screens/ScreenAbstraction.hpp
	Moteur2D/ResourceList.hpp
	Moteur2D/StartEndBool.cpp
	Moteur2D/StartEndBool.hpp
	Moteur2D/Timer.cpp
	Moteur2D/Timer.hpp
	Moteur2D/includes.hpp
	ProjectFiles/BossClass.cpp
	ProjectFiles/BossClass.hpp
	ProjectFiles/CarreCouleur.cpp
	ProjectFiles/CarreCouleur.hpp
	ProjectFiles/GameEndCredits.cpp
	ProjectFiles/GameEndCredits.hpp
	ProjectFiles/LevelBase.cpp
	ProjectFiles/LevelBase.hpp
	ProjectFiles/Level_HUD.cpp
	ProjectFiles/Level_HUD.hpp
	ProjectFiles/Levels/Level_1.cpp
	ProjectFiles/Levels/Level_1.hpp
	ProjectFiles/Levels/Level_2.cpp
	ProjectFiles/Levels/Level_2.hpp
	ProjectFiles/Levels/Level_3.cpp
	ProjectFiles/Levels/Level_3.hpp
	ProjectFiles/Levels/Level_4.cpp
	ProjectFiles/Levels/Level_4.hpp
	ProjectFiles/Menus/DefaultMenuButton.cpp
	ProjectFiles/Menus/DefaultMenuButton.hpp
	ProjectFiles/Menus/MainMenu.cpp
	ProjectFiles/Menus/MainMenu.hpp
	ProjectFiles/Menus/PauseMenu.cpp
	ProjectFiles/Menus/PauseMenu.hpp
	ProjectFiles/TitleScreen.cpp
	ProjectFiles/TitleScreen.hpp
	main.cpp
    up.hpp
)

target_link_libraries(carres_couleur_2
    sfml-graphics
    sfml-window
    sfml-system
)
